[gd_scene load_steps=2 format=3 uid="uid://sh7asdiassm"]

[ext_resource type="Script" path="res://settings_menu/main.gd" id="1_abcde"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_right = 46.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 200

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ControlsButton" type="Button" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="VideoButton" type="Button" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="AudioButton" type="Button" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="LanguageButton" type="Button" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Language"

[node name="Spacer" type="Control" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="SettingsWindow" type="Panel" parent="HSplitContainer"]
layout_mode = 2

[connection signal="pressed" from="HSplitContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]